# ProjectPractice

./: README.md
Linux/01_SimpleSystemMonitor/: README.md
Linux/01_SimpleSystemMonitor/client/src/: tcp_client.c
Linux/01_SimpleSystemMonitor/sever/lib/: FSTP.h
Linux/01_SimpleSystemMonitor/sever/src/: FSTP.c  data.txt  http_sever.c  tcp_sever.c
Linux/02_CodeLineCount_V1/: CodeLineCount_V1.sln  CodeLineCount_V1.vcxproj  CodeLineCount_V1.vcxproj.filters  FileHandle.c  FileHandle.h  main.c
Linux/02_CodeLineCount_V1/test/: log.txt  sscanf.c  strcmp_test.c
Linux/04_TasksManager/: CMakeLists.txt  README.md
Linux/04_TasksManager/inc/: Command.h  Logger.h  Task.h  TaskManager.h
Linux/04_TasksManager/src/: Logger.cpp  TaskManager.cpp  main.cpp
Linux/05_LaneRecognitionSystem/: CMakeLists.txt  ProjectReview.md  README.md
Linux/05_LaneRecognitionSystem/app/include/: Config.h  DataType.h  LaneDetector.h  LimeEnhance.h  Logger.hpp  MppDecoder.h  MppEncoder.h  PipeLine.h  RgaProcess.h  V4L2Camera.h
Linux/05_LaneRecognitionSystem/app/source/: LaneDetector.cpp  LimeEnhance.cpp  MppDecoder.cpp  MppEncoder.cpp  PipeLine.cpp  RgaProcess.cpp  V4L2Camera.cpp  main.cpp
Linux/05_LaneRecognitionSystem/bsp/: Makefile  Problem.md  imx415.c
MCU/自动小夜灯/: Readme.md
MCU/自动小夜灯/Demo/: 自动小夜灯青春版.uvguix.31420  自动小夜灯青春版.uvguix.Chen Fusheng  自动小夜灯青春版.uvoptx  自动小夜灯青春版.uvprojx
MCU/自动小夜灯/Demo/Driver/: at24cxx.c  at24cxx.h  body_detect.c  body_detect.h  buzzer.c  i2c_soft.c  i2c_soft.h  infrared_remote.c  infrared_remote.h  light.c  light.h  relay.c  relay.h  sound.c  sound.h  tim.c  tim.h  usart.c  usart.h
MCU/自动小夜灯/Demo/Listings/: startup_stm32f10x_md.lst  自动小夜灯青春版.map
MCU/自动小夜灯/Demo/Objects/: at24cxx.crf  at24cxx.d  body_detect.crf  body_detect.d  buzzer.crf  buzzer.d  buzzle.d  delay.crf  delay.d  i2c_soft.crf  i2c_soft.d  infrared_remote.crf  infrared_remote.d  light.crf  light.d  main.crf  main.d  misc.crf  misc.d  relay.crf  relay.d  sound.crf  sound.d  stm32f10x_adc.crf  stm32f10x_adc.d  stm32f10x_exti.crf  stm32f10x_exti.d  stm32f10x_gpio.crf  stm32f10x_gpio.d  stm32f10x_it.crf  stm32f10x_it.d  stm32f10x_rcc.crf  stm32f10x_rcc.d  stm32f10x_tim.crf  stm32f10x_tim.d  stm32f10x_usart.crf  stm32f10x_usart.d  system_stm32f10x.crf  system_stm32f10x.d  (+9 more)
MCU/遥控风扇/: Readme.md
MCU/遥控风扇/Demo/: 遥控风扇.uvguix.31420  遥控风扇.uvoptx  遥控风扇.uvprojx
MCU/骑行码表/: Readme.md
MCU/骑行码表/Demo/: 骑行码表.uvguix.31420  骑行码表.uvoptx  骑行码表.uvprojx
MCU/骑行码表pro/骑行码表/: Bike_SpeedWatch.uvguix.31420  Bike_SpeedWatch.uvoptx  Bike_SpeedWatch.uvprojx
calculator/: README.md  calculator.py  test_calculator.py
data_structures/: README.md  data_structures.py  test_data_structures.py
sorting_algorithms/: README.md  sorting.py  test_sorting.py
todo_list/: README.md  test_todo.py  todo.py
(+160 files in other folders)
